name:                sentry
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            Simple process monitoring
description:         Simple process monitoring
category:            Network
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          noteed@gmail.com
build-type:          Simple

library
  build-depends:       base == 4.*,
                       process == 1.1.*,
                       time == 1.1.*
  exposed-modules:     Sentry.Process
  ghc-options:         -Wall

executable sentry
  hs-source-dirs:      bin
  main-is:             sentry.hs
  build-depends:       base == 4.*,
                       cmdargs == 0.9.*,
                       configurator == 0.2.*,
                       sentry
  ghc-options:         -Wall
