name:                sentry
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            Simple process monitoring
description:         Simple process monitoring
category:            Network
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          noteed@gmail.com
build-type:          Simple

library
  build-depends:       base == 4.*,
                       ansi-terminal == 0.5.*,
                       bytestring == 0.9.*,
                       cereal == 0.3.*,
                       cmdargs == 0.9.*,
                       directory == 1.1.*,
                       filepath == 1.2.*,
                       old-locale == 1.0.*,
                       old-time == 1.0.*,
                       process == 1.1.*,
                       safecopy == 0.6.*,
                       time == 1.1.*,
                       unix == 2.4.*
  exposed-modules:     Sentry.Command,
                       Sentry.Process,
                       Sentry.Types
  ghc-options:         -Wall

executable sentry
  hs-source-dirs:      bin
  main-is:             sentry.hs
  build-depends:       base == 4.*,
                       directory == 1.1.*,
                       filepath == 1.2.*,
                       sentry,
                       unix == 2.4.*
  ghc-options:         -Wall
                       -threaded
